✨ feat(script): basic resolve

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <!--#endregion MY UTILS-->
 
     <!--#region VUE-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.10/vue.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.10/vue.min.js"
         integrity="sha512-H8u5mlZT1FD7MRlnUsODppkKyk+VEiCmncej8yZW1k/wUT90OQon0F9DSf/2Qh+7L/5UHd+xTLrMszjHEZc2BA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--#endregion VUE-->
 
     <!--#region BOOTSTRAP SCRIPT-->
@@ -36,9 +36,9 @@
         crossorigin="anonymous" defer></script> -->
     <!--#endregion BOOTSTRAP SCRIPT-->
     <!--#region AXIOS-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
         integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!--#endregion AXIOS-->
 
@@ -50,15 +50,13 @@
 <body>
 
 
-
-
-
-
-
-
-
-
-
+    <div id="app">
+        <ul>
+            <li v-for="(email, index) in emails" :key="index">
+                {{email}}
+            </li>
+        </ul>
+    </div>
 
 
     <script type="module" src="javascript/script.js"></script>
